[gd_scene load_steps=2 format=3 uid="uid://c26lqewjy4p3t"]

[ext_resource type="Script" uid="uid://brbkpycp2p5xx" path="res://Scenes/ResearchDMPanel.gd" id="1"]

[node name="ResearchDMPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Row1" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SessionLabel" type="Label" parent="Margin/VBox/Row1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Session: (unset)"

[node name="Duration" type="SpinBox" parent="Margin/VBox/Row1"]
layout_mode = 2
min_value = 10.0
max_value = 3600.0
step = 5.0
value = 30.0
suffix = " sec"

[node name="StartBtn" type="Button" parent="Margin/VBox/Row1"]
layout_mode = 2
text = "Start"

[node name="Row2" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PushTextEdit" type="TextEdit" parent="Margin/VBox/Row2"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter text to push to players…"

[node name="PushTextBtn" type="Button" parent="Margin/VBox/Row2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Push Text"

[node name="Row3" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ImageUrl" type="LineEdit" parent="Margin/VBox/Row3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Image URL (https://…)"

[node name="ImageCaption" type="LineEdit" parent="Margin/VBox/Row3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Caption (optional)"

[node name="PushImageBtn" type="Button" parent="Margin/VBox/Row3"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Push Image"

[node name="EndBtn" type="Button" parent="Margin/VBox"]
layout_mode = 2
text = "End Session"
